Deleted broken stuff

--- a/Bot/config.json
+++ b/Bot/config.json
@@ -1,4 +1,4 @@
 {
     "prefix": "!",
-    "token": "NDc4NjcyMzIzMTY4NDM2MjI1.DlOQmQ.qrwlrVZRqnLpGl7KsOGEGR0nebY"
+    "token": "NDc4Njc3MDYxNjA3NjIwNjA5.DlU0hw.0N8uEvftFTWl4RwzNEoIUq0GlCg"
 }
