--- a/Bot/betaConfig.json
+++ b/Bot/betaConfig.json
@@ -1,4 +1,5 @@
 {
   "prefix": "!!",
+  "ownerID": "139412744439988224",
   "token": "NDc4NjcyMzIzMTY4NDM2MjI1.DlOQmQ.qrwlrVZRqnLpGl7KsOGEGR0nebY"
 }
