--- a/Bot/config.json
+++ b/Bot/config.json
@@ -1,4 +1,5 @@
 {
     "prefix": ",",
+	"ownerID": "348164462672347142",
     "token": "NDc4Njc3MDYxNjA3NjIwNjA5.DlU0hw.0N8uEvftFTWl4RwzNEoIUq0GlCg"
 }
