GO GO POWER RANGERS

--- a/Bot/betaConfig.json
+++ b/Bot/betaConfig.json
@@ -1,5 +1,7 @@
 {
   "prefix": "!!",
-  "ownerID": "139412744439988224",
-  "token": "NDc4NjcyMzIzMTY4NDM2MjI1.DlOQmQ.qrwlrVZRqnLpGl7KsOGEGR0nebY"
+  "ownerID": "348164462672347142",
+  "token": "NDc4NjcyMzIzMTY4NDM2MjI1.DlOQmQ.qrwlrVZRqnLpGl7KsOGEGR0nebY",
+  "goodColor": "0xFF0000",
+  "badColor": "0x00FF00"
 }
