--- a/Bot/config.json
+++ b/Bot/config.json
@@ -1,5 +1,7 @@
 {
-    "prefix": ",",
-	"ownerID": "348164462672347142",
-    "token": "NDc4Njc3MDYxNjA3NjIwNjA5.DlU0hw.0N8uEvftFTWl4RwzNEoIUq0GlCg"
+  "prefix": ";",
+  "ownerID": "348164462672347142",
+  "token": "NDc4Njc3MDYxNjA3NjIwNjA5.DlU0hw.0N8uEvftFTWl4RwzNEoIUq0GlCg",
+  "goodColor": "0xFF0000",
+  "badColor": "0x00FF00"
 }
