This isn't a thing

--- a/Bot/betaConfig.json
+++ b/Bot/betaConfig.json
@@ -1,7 +1,7 @@
 {
   "prefix": "!!",
   "ownerID": "348164462672347142",
-  "token": "NDc4NjcyMzIzMTY4NDM2MjI1.DlOQmQ.qrwlrVZRqnLpGl7KsOGEGR0nebY",
+  "token": "NDc4NjcyMzIzMTY4NDM2MjI1.DlkkjA.MCqycki9bw_zP2BFnci-ZfiDg08",
   "goodColor": "0xFF0000",
   "badColor": "0x00FF00"
 }
