--- a/Bot/config.json
+++ b/Bot/config.json
@@ -1,7 +1,7 @@
 {
   "prefix": ";",
   "ownerID": "348164462672347142",
-  "token": "NDc4Njc3MDYxNjA3NjIwNjA5.DlU0hw.0N8uEvftFTWl4RwzNEoIUq0GlCg",
+  "token": "NDc4Njc3MDYxNjA3NjIwNjA5.DlkkzQ.EtgcILIPM6zeP64326o3J7oHF3I",
   "goodColor": "0xFF0000",
   "badColor": "0x00FF00"
 }
