MISS ME WITH THAT GAY SHIT
This better work or I'm done with github.

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ Bot.sln
 Bot/config.json
 stupidthing.js
 /Bot/node_modules
-/Bot/betaConfig.json
+Bot/betaConfig.json
 /Bot/Assets
 /bot.sln
 /Bot/beta.js
