--- a/Bot/config.json
+++ b/Bot/config.json
@@ -1,7 +1,7 @@
 {
   "prefix": ";",
   "ownerID": "348164462672347142",
-  "token": "NDc4Njc3MDYxNjA3NjIwNjA5.DlkkzQ.EtgcILIPM6zeP64326o3J7oHF3I",
+  "token": "NDc4NjcyMzIzMTY4NDM2MjI1.DloV2Q.bJn3oYd_I5tnxoDRZ8Xxf6-sTLQ",
   "goodColor": "0xFF0000",
   "badColor": "0x00FF00"
 }
