I'm just going to move config.json to C:\ honestly

--- a/Bot/config.json
+++ b/Bot/config.json
@@ -1,7 +1,7 @@
 {
   "prefix": ";",
   "ownerID": "348164462672347142",
-  "token": "NDc4NjcyMzIzMTY4NDM2MjI1.DloV2Q.bJn3oYd_I5tnxoDRZ8Xxf6-sTLQ",
+  "token": "token",
   "goodColor": "0xFF0000",
   "badColor": "0x00FF00"
 }
