I actually don't know what this is but ok.

--- a/Bot/betaConfig.json
+++ b/Bot/betaConfig.json
@@ -1,7 +1,7 @@
 {
   "prefix": "!!",
   "ownerID": "348164462672347142",
-  "token": "token",
+  "token": "NDc4NjcyMzIzMTY4NDM2MjI1.DloZ9Q.46o-dLIfU30RwVsvfsUfeFsHpls",
   "goodColor": "0xFF0000",
   "badColor": "0x00FF00"
 }
