--- a/Bot/package.json
+++ b/Bot/package.json
@@ -7,6 +7,7 @@
     "name": "marct"
   },
   "dependencies": {
-    "discord.js": "^11.4.2"
+    "discord.js": "^11.4.2",
+    "isurl": "^1.0.0"
   }
 }
